# sticker-packing.github.io

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pages.yml
src/: engine.rs  geom.rs  greedy.rs  lattice.rs  lib.rs  main.rs  output.rs  par.rs  svgio.rs  wasm_api.rs
tests/: pdf.rs  reg.rs
web/: app.ts  hash-assets.mjs  index.html  package.json  sticker_packer.js  trace.ts  tsconfig.json  types.ts  worker.js  worker.ts
