[package]
name = "sticker-packer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "pack_stickers"
path = "src/main.rs"
required-features = ["native"]

[[bin]]
name = "render"
path = "src/bin/render.rs"
required-features = ["render"]

[features]
default = ["native", "parallel", "pdf", "render"]
native = ["dep:clap"]
parallel = ["dep:rayon"]
pdf = ["dep:svg2pdf", "dep:lopdf"]
render = ["dep:resvg"]
# Browser multithreading: rayon over a Web Worker pool (needs nightly + -Zbuild-std + atomics).
wasm-threads = ["parallel", "dep:wasm-bindgen-rayon"]

[dependencies]
geo = "0.29"
geo-types = "0.7"
i_overlay = "1.9"
earcutr = "0.4"
usvg = "0.44"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rayon = { version = "1.10", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
svg2pdf = { version = "0.12", optional = true }
lopdf = { version = "0.34", optional = true, default-features = false, features = ["nom_parser"] }
resvg = { version = "0.44", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-rayon = { version = "1.2", optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
